--- a/_posts/2024-07-12-TIL.md
+++ b/_posts/2024-07-12-TIL.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "title_test"
-author: "author_Test"
+title:  "title_test2"
+author: "author_Test2"
 tags: ["TIL"]
 ---
 
@@ -9,8 +9,8 @@ tags: ["TIL"]
 
 ``` 
 
-content_test  
-asdasd
+content_test  2
+asdasd2
 
 ```
 
