--- a/_posts/2024-07-12-TIL.md
+++ b/_posts/2024-07-12-TIL.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "title_test2"
-author: "author_Test2"
+title:  "SQL 중심적인 개발의 문제점"
+author: "HARRY"
 tags: ["TIL"]
 ---
 
@@ -9,8 +9,7 @@ tags: ["TIL"]
 
 ``` 
 
-content_test  2
-asdasd2
+무한 반복, 지루한 코드..
 
 ```
 
