--- a/_posts/2024-08-13-TIL.md
+++ b/_posts/2024-08-13-TIL.md
@@ -23,6 +23,45 @@ Object의 다형성에 대해
 
 Object 의 toString() 호출하면 오버라이딩 된 것이 있는지 확인하고 있으면 재정의되어 있는 것 사용
 
+Object는 동등성 비교를 위해 equals()는 메소드를 제공
+
+자바는 두 객체가 같다라는 것 2가지로 분리해서 제공한다
+1.동일성(Identity) : == 연산자를 사용해서 두 객체의 참조가 동일한 객체를 가리키고 있는지 확인
+2.동등성(Equality) : equals() 메시드를 사용하여 두 객체가 논리적으로 동등한지 비교
+
+public class UserVo {
+    
+    private String id;
+    
+    public UserVo(String id) {
+        this.id = id;
+    }
+    
+    @Override
+    pubilc boolean equals(Object obj) {
+        UserVo user = (UserVo) obj;
+        return id.equals(uesr.id);
+    }
+}
+
+큰 생각없이 사용했는데 
+
+UserVo만 봐도 생각할 것이 많았다.
+
+equals()메소드는 오버라이드 해서 사용하지 않으면 == 이랑 다른 것이 없다  
+
+그런데 이렇게 오버라이드를 하면 왜 같은지 알게되었다.
+
+UserVo도 Object를 상속받고 있고 
+
+equals() 메소드를 오버라이드 해서 사용한다면 ==으로 비교하는 equals 아니라
+
+재정의된 equals() 를 사용한다.
+
+
+
+
+
 ```
 
 
