--- a/_posts/2024-08-14-TIL.md
+++ b/_posts/2024-08-14-TIL.md
@@ -21,7 +21,9 @@ tags: ["TIL"]
 
 개발자가 작업을 할 때 새로운 객체를 사용하고 set으로 값을 지정하려고 보면 오류가 뜰 것이다.
 
-set을 못하게 하거나 final로 두면 개발자는 알 수 있을 것이다 
+그러고 그 객체에가 만들어진 클래스로 가서 확인하면 set이 없거나 final을 볼 것이다.
+
+그러면 개발자는 생각 할 것이다.
 
 아 새로운 객체를 new로 만들어서 사용하면 된다는 것을
 
