--- a/_posts/2024-08-18-TIL.md
+++ b/_posts/2024-08-18-TIL.md
@@ -40,6 +40,7 @@ ex) class Data<K, V> {} 키와 밸류구나..
 타입 인자로 기본형은 사용할 수 없다
 기본형(int, double ..)은 사용할 수 없다 대신 래퍼 클래스(Integer, Double)를 사용하면 된다.
 
+제네릭은 컴파일 단계에서만 사용되고, 컴파일 이후 제네릭 정보는 삭제된다!
 
 ```
 
