--- a/_posts/2024-08-18-TIL.md
+++ b/_posts/2024-08-18-TIL.md
@@ -42,6 +42,8 @@ ex) class Data<K, V> {} 키와 밸류구나..
 
 제네릭은 컴파일 단계에서만 사용되고, 컴파일 이후 제네릭 정보는 삭제된다!
 
+실무에서 직접 제네릭을 설계하는 일은 드물로 그러므로 이미 만들어진 코드의 제네릭을 읽고 이해하면 충분하다!!
+
 ```
 
 
