--- a/_posts/2024-08-29-TIL.md
+++ b/_posts/2024-08-29-TIL.md
@@ -9,8 +9,22 @@ tags: ["TIL"]
 
 ``` 
 
-객체와 테이블를 잘 설계하고 매핑하자!
+1.객체와 테이블를 잘 설계하고 매핑하자!
+2.JPA의 내부 동작에 대해 이해하자!(영속성 컨텍스트)
 
+JPA -> Java Persistence API 자바 진영의 ORM 기술 표준
+ORM -> Object-relational mapping (객체 관계 매핑)
+
+객체는 객체대로 설계
+데이터베이스는 데이터베이스대로 설계
+ORM 프레임워크가 중간에서 매핑
+
+JPA는 애플리케이션과 JDBC 사이에서 동작
+
+같은 트랜잭션 안에서는 같은 엔티티를 반환 -> 약간의 조회 성능 향상
+트랜잭션을 커밋할 때까지 Insert SQL을 모음 한번에 전송
+
+영속성 컨텍스트 -> 엔티티를 영구 저장하는 환경 
 ```
 
 
