--- a/_posts/2024-10-09-TIL.md
+++ b/_posts/2024-10-09-TIL.md
@@ -26,5 +26,14 @@ Spring Data Jpa 는
 EntityGraph를 사용하기도 한다.
 
 @EntityGraph(attributePaths = {"엔티티"}) 이렇게사용하면 된다.
+또는
+엔티티클래스에서
+@NamedEntityGraph(name = "엔티티.all", attributeNodes = @NamedAttributeNode("다른엔티티")) 이렇게 사용해도 된다.
+이경우 @EntityGraph("엔티티.all")이렇게 하면된다.
+
+그런데 보통은 
+간단한 경우 @EntityGraph(attributePaths = {"엔티티"}) 이렇게사용하고
+
+일반적으로 JPQL에서 Fetch Join을 사용한다.
 
 ```
