--- a/_posts/2024-10-22-TIL.md
+++ b/_posts/2024-10-22-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "super"
+title:  "상속(Inheritance), 포함(composite)"
 author: "HARRY"
 tags: ["TIL"]
 ---
@@ -9,9 +9,22 @@ tags: ["TIL"]
 
 ``` 
 
-참조변수 super
+기존의 클래스로 새로운 클래스를 작성하는 것.(코드의 재사용)
+두 클래스를 부모와 자식으로 관계를 맺어주는 것
 
--객체 자신을 가리키는 참조변수. 인스턴스 메서드(생성자)내에만 존재
--조상의 멤버를 자신의 멤버와 구별할 때 사용
+ex) 
+class 자식클래스 extends 부모클래스 { 
+    // ....
+}
+
+class Parent {}
+class Child extends Parents { } 
+
+자손은 조상의 모든 멤버를 상속받는다(생성자, 초기화블럭 제외)
+자손의 멤버 개수는 조상보다 적을 수 없다(같거나 많다)
+
+---
+포함이란
+-클래스의 멤버로 참조변수를 선언하는 것 
 
 ```
