--- a/_posts/2024-12-08-TIL.md
+++ b/_posts/2024-12-08-TIL.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "자바중급"
+title:  "다형성"
 author: "HARRY"
 tags: ["TIL"]
 ---
@@ -9,6 +9,19 @@ tags: ["TIL"]
 
 ``` 
 
-git 테스트
+부모는 자식을 담을 수 있다. Parent, Child 객체가 상속관계라는 전재
+
+ex) Child child = new Parent();
+
+다양하게 참조할 수 있다 -> 다형적 참조
+
+그런데 
+
+Parent parent = new Child() 이렇게 되어있으면
+
+Child에만 있는 것은 사용할 수 없다
+
+그래서 Object는 다 받을 수 있는건가 모든 객체의 부모타입이므로..?
+
 
 ```
