--- a/_posts/2024-12-08-TIL.md
+++ b/_posts/2024-12-08-TIL.md
@@ -9,7 +9,7 @@ tags: ["TIL"]
 
 ``` 
 
-부모는 자식을 담을 수 있다. Parent, Child 객체가 상속관계라는 전재
+부모는. 자식을 담을 수 있다. Parent, Child 객체가 상속관계라는 전재
 
 ex) Child child = new Parent();
 
